<resources>
    <string name="app_name">MoviesApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_poster_content_description">Image poster of the movie</string>
    <string name="bookmark">Bookmark</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="overview">Overview</string>
    <string name="movie_list_item">Movie list item</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="backdrop_image_of_the_movie">Backdrop image of the movie</string>
    <string name="language_of_the_movie">Original language: %1$s</string>"
    <string name="release_date_of_the_movie">Released on %1$s</string>
    <string name="votes_average_reviews_of_the_movie">%1$.2f (%2$d reviews)</string>

</resources>