<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/black_gradient" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Movie title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="170dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_poster_content_description"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="337dp" />

    <TextView
        android:id="@+id/txt_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/baseline_star_rate_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@id/txt_release_date"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        tools:text="8.2 (756 reviews)" />

    <TextView
        android:id="@+id/txt_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/baseline_calendar_today_24"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@id/txt_reviews"
        tools:text="Released on 2025-08-02" />

    <TextView
        android:id="@+id/txt_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/baseline_language_24"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/txt_release_date"
        app:layout_constraintTop_toBottomOf="@id/txt_release_date"
        tools:text="Language: English" />

    <TextView
        android:id="@+id/btn_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookmark"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        app:drawableTopCompat="@drawable/baseline_bookmark_border_24"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite"
        app:drawableTopCompat="@drawable/baseline_favorite_border_24"
        app:layout_constraintStart_toEndOf="@+id/btn_bookmark"
        app:layout_constraintTop_toTopOf="@id/btn_bookmark"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:drawableTopCompat="@drawable/baseline_share_24"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="@+id/btn_bookmark"
        app:layout_constraintStart_toEndOf="@+id/btn_favorite"
        />

    <TextView
        android:id="@+id/txt_overview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <TextView
        android:id="@+id/txt_overview_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@+id/txt_overview_title" />

</androidx.constraintlayout.widget.ConstraintLayout>